# csb

./: .clang-format  .gitignore  CMakeLists.txt  README.md
binary_tree/: BinaryTree.md  binary_tree.hpp  binary_tree.test.cpp  tree_utils.hpp  tree_utils_test.cpp
core/: concepts.hpp  is_regular_test.hpp  test_util.hpp  type_traits.hpp
csb/: CMakeLists.txt
csb/core/: catch_util.hpp  concepts.hpp  is_regular_test.hpp
csb/linked_list/: CMakeLists.txt  main.cpp  singly_linked_list.hpp  singly_linked_list.test.cpp
csb/static_array/: CMakeLists.txt  static_array.test.cpp
linked_list/: CMakeLists.txt  LinkedLists.md  README.md  singly_linked_list.hpp  singly_linked_list.test.cpp
red_black_tree/: README.md  RedBlackTree.md  red_black_tree.hpp  red_black_tree.test.cpp
reverse/: README.md  reverse.hpp  reverse.test.cpp
static_array/: StaticArray.md  static_array.hpp  static_array.test.cpp
